--- a/app/javascript/flavours/glitch/locales/en.json
+++ b/app/javascript/flavours/glitch/locales/en.json
@@ -60,11 +60,14 @@
   "navigation_bar.keyboard_shortcuts": "Keyboard shortcuts",
   "navigation_bar.misc": "Misc",
   "notification.markForDeletion": "Mark for deletion",
+  "notification.reaction": "{name} reacted to your post",
   "notification_purge.btn_all": "Select\nall",
   "notification_purge.btn_apply": "Clear\nselected",
   "notification_purge.btn_invert": "Invert\nselection",
   "notification_purge.btn_none": "Select\nnone",
   "notification_purge.start": "Enter notification cleaning mode",
+  "notifications.column_settings.reaction": "Reactions:",
+  "notifications.filter.reactions": "Reactions",
   "notifications.marked_clear": "Clear selected notifications",
   "notifications.marked_clear_confirmation": "Are you sure you want to permanently clear all selected notifications?",
   "settings.always_show_spoilers_field": "Always enable the Content Warning field",
@@ -154,7 +157,9 @@
   "status.in_reply_to": "This toot is a reply",
   "status.is_poll": "This toot is a poll",
   "status.local_only": "Only visible from your instance",
+  "status.react": "React",
   "status.sensitive_toggle": "Click to view",
   "status.uncollapse": "Uncollapse",
-  "suggestions.dismiss": "Dismiss suggestion"
+  "suggestions.dismiss": "Dismiss suggestion",
+  "tooltips.reactions": "Reactions"
 }
