--- a/app/javascript/flavours/glitch/locales/en.json
+++ b/app/javascript/flavours/glitch/locales/en.json
@@ -160,6 +160,5 @@
   "status.react": "React",
   "status.sensitive_toggle": "Click to view",
   "status.uncollapse": "Uncollapse",
-  "suggestions.dismiss": "Dismiss suggestion",
-  "tooltips.reactions": "Reactions"
+  "suggestions.dismiss": "Dismiss suggestion"
 }
